# chitti

./: docker-compose.yml
backend/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: assignments.py  auth.py  chits.py  collections.py  members.py  payments.py  payouts.py  slots.py
backend/app/core/: config.py  utils.py
backend/app/crud/: __init__.py  crud_assignments.py  crud_auth.py  crud_chits.py  crud_collections.py  crud_members.py  crud_payments.py  crud_payouts.py  crud_slots.py
backend/app/db/: listeners.py  session.py
backend/app/models/: __init__.py  assignments.py  auth.py  chits.py  collections.py  members.py  payments.py  payouts.py  slots.py
backend/app/schemas/: assignments.py  auth.py  chits.py  collections.py  members.py  month_members.py  payments.py  payouts.py  slots.py
backend/app/security/: core.py  dependencies.py
backend/migrations/: env.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.js
frontend/e2e/: login.spec.js
frontend/src/: App.jsx  index.css  main.jsx  routes.js
frontend/src/constants/: colors.js  enums.js
frontend/src/contexts/: ThemeContext.jsx
frontend/src/hooks/: useActiveSection.jsx  useCursorTracking.jsx  useMediaQuery.jsx  useScreenSize.js  useScrollToTop.js  useTableKeyboardNavigation.js  useTheme.jsx
frontend/src/lib/: api.js  queryClient.js
frontend/src/pages/: ChitDetailPage.jsx  ChitViewDashboard.jsx  ChitsPage.jsx  CollectionDetailPage.jsx  CollectionsPage.jsx  CreateGroupPage.jsx  (+13 more)
(+237 files in other folders)
